languages/CNNArchLang/src/test/resources/invalid_tests/OutputWrittenToMultipleTimes.cnna
/* (c) https://github.com/MontiCore/monticore */
architecture OutputWrittenToMultipleTimes{
    def input Q(-oo:+oo)^{10} data[2]
    def output Q(0:1)^{4} pred

    data[0] ->
    FullyConnected(units=4, no_bias=true) ->
    Softmax() ->
    pred;

    data[1] ->
    FullyConnected(units=4, no_bias=true) ->
    Softmax() ->
    pred;
}
